[package]
name = "blog-os"
version = "0.1.0"
edition = "2021"


[package.metadata.bootimage]
# iobase is the base I/O port for the QEMU ISA debug exit device
# iosize is the size of the I/O port
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
# (0x10 << 1) | 1
test-success-exit-code = 33
test-timeout = 300          # (in seconds)


[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.9.8"
uart_16550 = "0.3.2"
volatile = "0.2.6"
x86_64 = "0.15.2"
